infrastructure/eks/manifests/ingress/external.yaml
kind: Service
apiVersion: v1
metadata:
  name: asserts
  namespace: serves
spec:
  type: ExternalName
  externalName: fluidattacks.gitlab.io
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-pages
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/upstream-vhost: "fluidattacks.gitlab.io"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-redirect-from: //fluidattacks.gitlab.io/asserts/
    nginx.ingress.kubernetes.io/proxy-redirect-to: /asserts/
spec:
  tls:
  - hosts:
    - fluidattacks.com
    secretName: fluidattacks-cert
  rules:
  - host: fluidattacks.com
    http:
      paths:
      - backend:
          serviceName: asserts
          servicePort: 443
        path: /asserts(.*)
---
kind: Service
apiVersion: v1
metadata:
  name: formstack
  namespace: serves
spec:
  type: ExternalName
  externalName: fluidsignal.formstack.com
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: formstack
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/upstream-vhost: "fluidsignal.formstack.com"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - fluidattacks.com
    secretName: fluidattacks-cert
  rules:
  - host: fluidattacks.com
    http:
      paths:
      - backend:
          serviceName: formstack
          servicePort: 443
        path: /forms(.*)
---
kind: Service
apiVersion: v1
metadata:
  name: web
  namespace: serves
spec:
  type: ExternalName
  externalName: web.fluidattacks.com
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/upstream-vhost: "web.fluidattacks.com"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/app-root: "/web/"
spec:
  tls:
  - hosts:
    - fluidattacks.com
    secretName: fluidattacks-cert
  rules:
  - host: fluidattacks.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /(.*)?
