infrastructure/eks/manifests/ingress/secondary-domains.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: secondary-domains
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - fluidsignal.com.co
    - fluidsignal.co
    - fluidsignal.com
    - fluid.com.co
    - fluid.la
    - fluidattacks.co
    - fluidattacks.com.co
    - fluidattacks.io
    secretName: secondary-domains-cert
  rules:
  - host: fluidsignal.com.co
    http:
      paths:
      - backend:
          serviceName: alg
          servicePort: 80
  - host: fluidsignal.co
    http:
      paths:
      - backend:
          serviceName: alg
          servicePort: 80
  - host: fluidsignal.com
    http:
      paths:
      - backend:
          serviceName: alg
          servicePort: 80
  - host: fluid.com.co
    http:
      paths:
      - backend:
          serviceName: alg
          servicePort: 80
  - host: fluid.la
    http:
      paths:
      - backend:
          serviceName: alg
          servicePort: 80
  - host: fluidattacks.co
    http:
      paths:
      - backend:
          serviceName: alg
          servicePort: 80
  - host: fluidattacks.com.co
    http:
      paths:
      - backend:
          serviceName: alg
          servicePort: 80
  - host: fluidattacks.io
    http:
      paths:
      - backend:
          serviceName: alg
          servicePort: 80
