infrastructure/eks/manifests/ingress/sourcegraph.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sourcegraph
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - sourcegraph.fluidattacks.com
    secretName: sourcegraph-cert
  rules:
  - host: sourcegraph.fluidattacks.com
    http:
      paths:
      - backend:
          serviceName: sourcegraph
          servicePort: 7080
