infrastructure/eks/manifests/ingress/vault.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - vault.fluidattacks.com
    secretName: vault-cert
  rules:
  - host: vault.fluidattacks.com
    http:
      paths:
      - backend:
          serviceName: vault
          servicePort: 8200
